--- a/assets/index.html
+++ b/assets/index.html
@@ -62,6 +62,9 @@
           </div>
         </div>
       </div>
+      <div class="container container-header">
+        <h1 class="header-title">Призы от ZHANTAQ tea</h1>
+      </div>
     </header>
     <script src="js/scripts.min.js"></script>
   </body>
