--- a/assets/index.html
+++ b/assets/index.html
@@ -65,7 +65,159 @@
       <div class="container container-header">
         <h1 class="header-title">Призы от ZHANTAQ tea</h1>
       </div>
+      <!-- <img class="bottles" src="images/header-bottle.png" alt="Бутылки" /> -->
+      <a class="btn-action" href="#">
+        <img src="images/header-btn.png" alt="" />
+      </a>
     </header>
+    <main>
+      <section class="prizes">
+        <img src="images/gtoil-service.png" alt="" class="gt-oil" />
+        <div class="container">
+          <h2 class="prizes-title">Призы от <b>ZHANTAQ tea</b></h2>
+          <p class="prizes-text">
+            Ты автолюбитель, у нас для тебя радостная новость, «ZHANTAQ tea»
+            совместно с компанией «<span class="text-red">G</span>T oil
+            service», объявляют розыгрыш ценных призов. А самое главное, ZHANTAQ
+            tea поможет тебе оставаться всегда в бодром состояние, быть в тонусе
+            и поддерживать свой организм здоровым.
+          </p>
+          <p class="prizes-text">
+            С 4 мая по 30 июня по всей сети «<span class="text-red">G</span>T
+            oil service» с 09:00 по 19:00 любой желающий может принять участие в
+            акции. Для этого нужно приехать в указанные ниже адреса для наклейки
+            стикера на своё авто и получить в подарок бутылку ZHANTAQ tea, а
+            также получить 5% скидку на товар и услуги компании «<span
+              class="text-red"
+              >G</span
+            >T oil service» единоразово.
+          </p>
+          <p class="prizes-text">
+            Данная скидка действует в момент нанесения стикера и не суммируется
+            с другими акциями компанией «<span class="text-red">G</span>T oil
+            service»
+          </p>
+          <p class="prizes-text">
+            C 10.09.2022 по 29.07.2022 Слушай эфир «LOVE» и «Той Думан» радио с
+            Пн. по Пт.<img
+              class="radio"
+              src="images/radio-icon.png"
+              alt=""
+            /><img class="radio" src="images/toy-icon.png" alt="" />
+            с 18:00 до 19:00, в прямом эфире будет озвучена локация с призами в
+            г. Алматы, первые пять прибышиех участников данной акции получат
+            талоны на бензин и другие ценные призы.
+          </p>
+          <h2 class="prizes-title">Призы:</h2>
+          <div class="prizes-lists">
+            <div class="prizes-list">
+              <h3 class="days">Понедельник-четверг:</h3>
+              <ul>
+                <li>1) 20 л. Бензина АИ-92</li>
+                <li>2) 10 л. Бензина АИ-92 и 6 ZHANTAQ tea</li>
+                <li>3) 12 ZHANTAQ + Футболка</li>
+                <li>4) 6 ZHANTAQ tea</li>
+                <li>5) 4 ZHANTAQ tea</li>
+              </ul>
+            </div>
+            <div class="prizes-list">
+              <h3 class="days">Пятница:</h3>
+              <ul>
+                <li>1) 50 л. Бензина АИ-92</li>
+                <li>2) 20 л. Бензина АИ-92 и 12 ZHANTAQ tea</li>
+                <li>3) 12 ZHANTAQ tea + Футболка</li>
+                <li>4) 6 ZHANTAQ tea + Футболка</li>
+                <li>5) 4 ZHANTAQ tea + Футболка</li>
+              </ul>
+            </div>
+          </div>
+          <p class="prizes-text">
+            Данная акция действует только на территории г. Алматы (Розыгрыш
+            призов будет проходить только в черте г. Алматы).
+          </p>
+          <div class="prizes-conditions">
+            <h3 class="conditions-title">
+              Обязательные условия для участия в акции:
+            </h3>
+            <ul>
+              <li>- иметь на автомобиле стикер «ZHANTAQ tea»</li>
+              <li>- быть подписчиком Instagramm аккаунта zhantaq_tea</li>
+            </ul>
+          </div>
+          <div class="program">
+            <h3 class="program-title">Адресная программа:</h3>
+            <h3 class="program-title">Адрес:</h3>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              Тлендиева, 377а, Бостандыкский, г.Алматы
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              ул. Алматы участок, 88 пос. Каргалы (Фабричный), Алматинская
+              область
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              Ангарская, 137 Жетысуский район, г. Алматы
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              г. Алматы, проспект Райымбека 355/2 Алатауский район
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              (ПЗМ) г. Алматы, Бостандыкский район, Сатпаева, 90/211 (на
+              территории ТЦ «Avtodom»)
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              г. Алматы, Турксибский район, Миасская 2Б
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              г. Алматы, Жетысуский район, Жансугурова, 194Б
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              обл. Алматинская Караайский район, с.о Елтайский, М.Кенжин, уч 61,
+              ст. 71 разъезд
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              г.Алматы, Ауэзовский район, Яссауи 190
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              г. Алматы Мкр. Бостандыкский район, Дарын 24Б
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              Алматинская обл., Илийский р-н, п. Боралдай, ул. Аэродромная, д 2Г
+            </p>
+            <p class="program-text">
+              «<span class="text-red">G</span>T oil service»<br />
+              Алматинская область, г. Каскелен, Проспект Абылай Хана 1а
+            </p>
+            <p class="program-text">
+              Бутик «<span class="text-red">G</span>T oil service»<br />
+              г. Алматы, Бостандыкский район, Сатпаева 90/21, 1 этаж (на
+              территории ТЦ «Avtodom»)
+            </p>
+            <p class="program-text">
+              Бутик «<span class="text-red">G</span>T oil service»<br />
+              154-155 ТЦ «Car city» микрорайон Баянаул, 57а, 2 ярус Ауэзовский
+              район, г. Алматы Время работы 10:00-18:00
+            </p>
+          </div>
+          <div class="note">
+            <h3 class="note-title">ПРИМИЧАНИЕ!</h3>
+            <p class="note-text">
+              Сотрудники компании и их родственники не могу принимать участие.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
