--- a/assets/index.html
+++ b/assets/index.html
@@ -97,17 +97,18 @@
             с другими акциями компанией «<span class="text-red">G</span>T oil
             service»
           </p>
-          <p class="prizes-text">
-            C 10.09.2022 по 29.07.2022 Слушай эфир «LOVE» и «Той Думан» радио с
-            Пн. по Пт.<img
-              class="radio"
-              src="images/radio-icon.png"
-              alt=""
-            /><img class="radio" src="images/toy-icon.png" alt="" />
-            с 18:00 до 19:00, в прямом эфире будет озвучена локация с призами в
-            г. Алматы, первые пять прибышиех участников данной акции получат
-            талоны на бензин и другие ценные призы.
-          </p>
+          <div class="icons-wrapper">
+            <div class="icons">
+              <img src="images/radio-icon.png" alt="">
+              <img src="images/toy-icon.png" alt="">
+            </div>
+             <p class="prizes-text">
+               C 10.09.2022 по 29.07.2022</br> Слушай эфир «LOVE» и «Той Думан» радио с
+              Пн. по Пт.</br> с 18:00 до 19:00, в прямом эфире будет озвучена локация с призами в
+              г. Алматы, первые пять прибышиех участников данной акции получат
+              талоны на бензин и другие ценные призы.
+            </p>
+          </div>
           <h2 class="prizes-title">Призы:</h2>
           <div class="prizes-lists">
             <div class="prizes-list">
@@ -141,7 +142,7 @@
             </h3>
             <ul>
               <li>- иметь на автомобиле стикер «ZHANTAQ tea»</li>
-              <li>- быть подписчиком Instagramm аккаунта zhantaq_tea</li>
+              <li>- быть подписчиком Instagramm аккаунта <a href="https://instagram.com/zhantaq.tea" target="_blank"><img class="inst-icon" src="images/instagram-icon.png" alt=""></a> zhantaq_tea</li>
             </ul>
           </div>
           <div class="program">
