--- a/assets/index.html
+++ b/assets/index.html
@@ -72,7 +72,6 @@
     </header>
     <main>
       <section class="prizes">
-        <img src="images/gtoil-service.png" alt="" class="gt-oil" />
         <div class="container">
           <h2 class="prizes-title">Призы от <b>ZHANTAQ tea</b></h2>
           <p class="prizes-text">
@@ -154,33 +153,33 @@
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              ул. Алматы участок, 88 пос. Каргалы (Фабричный), Алматинская
+              ул. Алматы участок, 88</br> пос. Каргалы (Фабричный), Алматинская
               область
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              Ангарская, 137 Жетысуский район, г. Алматы
+              Ангарская, 137</br> Жетысуский район, г. Алматы
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, проспект Райымбека 355/2 Алатауский район
+              г. Алматы, проспект Райымбека 355/2</br> Алатауский район
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              (ПЗМ) г. Алматы, Бостандыкский район, Сатпаева, 90/211 (на
+              (ПЗМ) г. Алматы, Бостандыкский район,</br> Сатпаева, 90/211 (на
               территории ТЦ «Avtodom»)
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, Турксибский район, Миасская 2Б
+              г. Алматы, Турксибский район,</br> Миасская 2Б
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, Жетысуский район, Жансугурова, 194Б
+              г. Алматы, Жетысуский район,</br> Жансугурова, 194Б
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              обл. Алматинская Караайский район, с.о Елтайский, М.Кенжин, уч 61,
+              обл. Алматинская Караайский район,</br> с.о Елтайский, М.Кенжин, уч 61,
               ст. 71 разъезд
             </p>
             <p class="program-text">
@@ -193,20 +192,20 @@
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              Алматинская обл., Илийский р-н, п. Боралдай, ул. Аэродромная, д 2Г
+              Алматинская обл., Илийский р-н, п. Боралдай,</br> ул. Аэродромная, д 2Г
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              Алматинская область, г. Каскелен, Проспект Абылай Хана 1а
+              Алматинская область, г. Каскелен,</br> Проспект Абылай Хана 1а
             </p>
             <p class="program-text">
               Бутик «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, Бостандыкский район, Сатпаева 90/21, 1 этаж (на
+              г. Алматы, Бостандыкский район,</br> Сатпаева 90/21, 1 этаж (на
               территории ТЦ «Avtodom»)
             </p>
             <p class="program-text">
               Бутик «<span class="text-red">G</span>T oil service»<br />
-              154-155 ТЦ «Car city» микрорайон Баянаул, 57а, 2 ярус Ауэзовский
+              154-155 ТЦ «Car city» микрорайон Баянаул, 57а, 2 ярус</br> Ауэзовский
               район, г. Алматы Время работы 10:00-18:00
             </p>
           </div>
