Prizes section all screens

--- a/assets/index.html
+++ b/assets/index.html
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      <div class="container container-header">
+      <div class="container container-custom">
         <h1 class="header-title">Призы от ZHANTAQ tea</h1>
       </div>
       <!-- <img class="bottles" src="images/header-bottle.png" alt="Бутылки" /> -->
@@ -72,7 +72,7 @@
     </header>
     <main>
       <section class="prizes">
-        <div class="container">
+        <div class="container container-custom">
           <h2 class="prizes-title">Призы от <b>ZHANTAQ tea</b></h2>
           <p class="prizes-text">
             Ты автолюбитель, у нас для тебя радостная новость, «ZHANTAQ tea»
@@ -97,13 +97,13 @@
             service»
           </p>
           <div class="icons-wrapper">
-            <div class="icons">
+            <!-- <div class="icons">
               <img src="images/radio-icon.png" alt="">
               <img src="images/toy-icon.png" alt="">
-            </div>
+            </div> -->
+            <span> C 10.09.2022 по 29.07.2022</span>
              <p class="prizes-text">
-               C 10.09.2022 по 29.07.2022</br> Слушай эфир «LOVE» и «Той Думан» радио с
-              Пн. по Пт.</br> с 18:00 до 19:00, в прямом эфире будет озвучена локация с призами в
+               </br> Слушай эфир «LOVE» и «Той Думан» радио с Пн. по Пт.<span class="icons"><img class="radio" src="images/radio-icon.png" alt=""> <img src="images/toy-icon.png" alt=""></span></br>с 18:00 до 19:00, в прямом эфире будет озвучена локация с призами в
               г. Алматы, первые пять прибышиех участников данной акции получат
               талоны на бензин и другие ценные призы.
             </p>
