Btn-action all screens

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/logo.webp" />
     <link rel="stylesheet" href="css/styles.min.css" />
     <title>Zhantaq</title>
   </head>
   <body>
     <header class="header">
+      <img class="bottles" src="images/header-bottle.png" alt="">
       <div class="top-line">
         <div class="container">
           <div class="header-logo">
@@ -66,9 +68,7 @@
         <h1 class="header-title">Призы от ZHANTAQ tea</h1>
       </div>
       <!-- <img class="bottles" src="images/header-bottle.png" alt="Бутылки" /> -->
-      <a class="btn-action" href="#">
-        <img src="images/header-btn.png" alt="" />
-      </a>
+      <a class="btn-action" href="#">Участвовать в розыгрыше</a>
     </header>
     <main>
       <section class="prizes">
