--- a/assets/index_kz.html
+++ b/assets/index_kz.html
@@ -75,127 +75,120 @@
         <div class="container container-custom">
           <h2 class="prizes-title">Призы от <b>ZHANTAQ tea</b></h2>
           <p class="prizes-text">
-            Ты автолюбитель, у нас для тебя радостная новость, «ZHANTAQ tea» совместно с компанией «<span class="text-red">G</span>T oil service», объявляют розыгрыш ценных призов. А самое главное, ZHANTAQ tea поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
+            Автожүргізуші болсаңыз, сізді қуантатын жаңалығымыз бар!  «ZHANTAQ tea» мен «<span class="text-red">G</span>T oil service» компаниясылары бірге бағалы сыйлықтарға ұтыс жариялайды. Ал ең бастысы, ZHANTAQ tea сізге барлық уақытта сергек жүруге, тонуста болуға және ағзаңызды күтуге көмектеседі.
           </p>
           <p class="prizes-text">
-            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку «ZHANTAQ tea» на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку ZHANTAQ tea, а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> oil service» единоразово
+            06.05 – 31.07 дейін «<span class="text-red">G</span>T oil service» желілері бойынша сағат 09:00-ден 19:00-ге дейін кез келген жүргізуші науқанға қатыса алады. Ұтыс ойынына қатысу үшін төменде көрсетілген мекенжайларға міндетті түрде келіп, өз көлігіңізге "ZHANTAQ tea" жапсырмасын жапсыру арқылы акцияға қатысуға мумкіншілік аласыз. Сонымен қатар сыйлыққа "ZHANTAQ tea" бөтелкесін және «<span class="text-red">G</span> oil service» компаниясының тауарлары мен қызметтеріне бір реттік 5% жеңілдікке ие боласыз.
           <p class="prizes-text">
-            Данная скидка действует в момент нанесения наклейки и не суммируется с другими акциями компанией «<span class="text-red">G</span> oil service»
+            Бұл жеңілдік жапсырма жабыстырған сәттен бастап күшіне ие болады, бірақ ол «<span class="text-red">G</span> oil service» компаниясының басқа акцияларына  жүргізілмейді. 
           </p>
           <div class="icons-wrapper">
-            <span> C 10.05.2022 по 29.07.2022</span>
+            <span> 10.05.2022 - 29.07.2022 </span>
              <p class="prizes-text">
-               </br> Слушай эфир «LOVE» и «Той Думан» радио с Пн. по Пт.<span class="icons"><img class="radio" src="images/radio-icon.png" alt=""> <img src="images/toy-icon.png" alt=""></span></br>с 18:00 до 19:00, в прямом эфире будет озвучена локация с призами в
-              г. Алматы, первые пять прибышиех участников данной акции получат
-              талоны на бензин и другие ценные призы.
+               </br>аралығында «LOVE» пен «Той Думан» радиоларының эфирінде тыңдаңыз. Дүйсенбі – жұма күндері,<span class="icons"><img class="radio" src="images/radio-icon.png" alt=""> <img src="images/toy-icon.png" alt=""></span></br>сағат 18:00 -19:00 аралығында, тікелей эфирде, Алматы қаласы бойынша сыйлығыңызды алып кете алатын локацияларды жариялаймыз. Радиода айтылған локацияларға бірінші болып келген бес қатысушысы бензинге талон және басқа да сыйлықтарға ие болады.
             </p>
           </div>
-          <h2 class="prizes-title">Призы:</h2>
+          <h2 class="prizes-title">Сыйлықтар: </h2>
           <div class="prizes-lists">
             <div class="prizes-list">
-              <h3 class="days">Понедельник-четверг:</h3>
+              <h3 class="days">Дүйсенбі-бейсенбі:</h3>
               <ul>
-                <li>1) 20 л. Бензина АИ-92</li>
-                <li>2) 10 л. Бензина АИ-92 и 6 ZHANTAQ tea</li>
-                <li>3) 12 ZHANTAQ + Футболка</li>
-                <li>4) 6 ZHANTAQ tea</li>
-                <li>5) 4 ZHANTAQ tea</li>
+                <li>1) 20 л. Бензин АИ-92</li>
+                <li>2) 10 л. Бензин АИ-92 және 6 дана ZHANTAQ tea </li>
+                <li>3) 12 дана ZHANTAQ tea  + Жейде </li>
+                <li>4) 6 дана ZHANTAQ tea </li>
+                <li>5) 4 дана ZHANTAQ tea </li>
               </ul>
             </div>
             <div class="prizes-list">
-              <h3 class="days">Пятница:</h3>
+              <h3 class="days">Жұма:</h3>
               <ul>
-                <li>1) 50 л. Бензина АИ-92</li>
-                <li>2) 20 л. Бензина АИ-92 и 12 ZHANTAQ tea</li>
-                <li>3) 12 ZHANTAQ tea + Футболка</li>
-                <li>4) 6 ZHANTAQ tea + Футболка</li>
-                <li>5) 4 ZHANTAQ tea + Футболка</li>
+                <li>1) 50 л. Бензин АИ-92</li>
+                <li>2) 20 л. Бензин АИ-92 және 12 дана ZHANTAQ tea</li>
+                <li>3) 12 дана ZHANTAQ tea + жейде</li>
+                <li>4) 6 дана ZHANTAQ tea + жейде</li>
+                <li>5) 4 дана ZHANTAQ tea + жейде</li>
               </ul>
             </div>
           </div>
           <p class="prizes-text">
-            Данная акция действует только на территории г. Алматы (Розыгрыш
-            призов будет проходить только в черте г. Алматы).
+            Бұл акция тек Алматы қаласында өтеді. (Сыйлықтар тек Алматы қаласында ойнатылады).
           </p>
           <div class="prizes-conditions">
             <h3 class="conditions-title">
-              Обязательные условия для участия в акции:
+                Акцияға қатысу шарттары: 
             </h3>
             <ul>
-              <li>- иметь на автомобиле стикер «ZHANTAQ tea»</li>
-              <li>- быть подписчиком Instagramm аккаунта <a href="https://instagram.com/zhantaq.tea" target="_blank"><img class="inst-icon" src="images/instagram-icon.png" alt=""></a> zhantaq_tea</li>
+              <li>- автокөлігіңізге «ZHANTAQ tea» жапсырманың жабыстыру </li>
+              <li>- zhantaq_tea Instagram аккаунтының жазылушысы болу<a href="https://instagram.com/zhantaq.tea" target="_blank"><img class="inst-icon" src="images/instagram-icon.png" alt=""></a> zhantaq_tea</li>
             </ul>
           </div>
           <div class="program">
-            <h3 class="program-title">Адресная программа:</h3>
+            <h3 class="program-title">Бағдарлама мекен-жайлары:</h3>
             <h3 class="program-title">Адрес:</h3>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              Тлендиева, 377а, Бостандыкский, г.Алматы
+              Төлендиев, 377а, Бостандық ауданы, Алматы қ.
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              ул. Алматы участок, 88</br> пос. Каргалы (Фабричный), Алматинская
-              область
+              Алматы көшесі, 88 учаске</br>Қарғалы елд. (Фабричный), Алматы облысы 
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              Ангарская, 137</br> Жетысуский район, г. Алматы
+              Ангарская, 137</br> Жетісу ауданы, Алматы қ.
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, проспект Райымбека 355/2</br> Алатауский район
+              Алматы қ., Райымбек даңғылы 355/2</br> Алатау ауданы
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service» (ПЗМ)<br />
-              г. Алматы, Бостандыкский район,</br> Сатпаева, 90/211 (на
-              территории ТЦ «Avtodom»)
+              Алматы қ., Бостандық ауданы,</br> Сәтбаев, 90/211 («Avtodom» СО аумағында)
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, Турксибский район,</br> Миасская 2Б
+              Алматы қ., Түрксіб ауданы,</br> Миасская 2Б
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, Жетысуский район,</br> Жансугурова, 194Б
+              Алматы қ., Жетісу ауданы,</br> Жансүгіров, 194Б
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              обл. Алматинская Караайский район,</br> с.о Елтайский, М.Кенжин, уч 61,
-              ст. 71 разъезд
+              Алматы обл. Қарасай ауданы, Елтай а.о.,</br> М.Кенжин, 61 уч., 71 разъезд ст.
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г.Алматы, Ауэзовский район, Яссауи 190
+              Алматы қ., Әуезов ауданы, Яссауи, 190
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы Мкр. Бостандыкский район, Дарын 24Б
+              Алматы қ. Бостандық ауданы, Дарын 24Б
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              Алматинская обл., Илийский р-н, п. Боралдай,</br> ул. Аэродромная, д 2Г
+              Алматы обл., Іле ауданы, Боралдай елд.,</br> Аэродромная көш., 2Г үй
             </p>
             <p class="program-text">
               «<span class="text-red">G</span>T oil service»<br />
-              Алматинская область, г. Каскелен,</br> Проспект Абылай Хана 1а
+              Алматы облысы, Қаскелең қ.,</br> Абылай Хан  даңғылы, 1а
             </p>
             <p class="program-text">
               Бутик «<span class="text-red">G</span>T oil service»<br />
-              г. Алматы, Бостандыкский район,</br> Сатпаева 90/21, 1 этаж (на
-              территории ТЦ «Avtodom»)
+              Алматы қ., Бостандық ауданы,</br> Сәтбаев 90/21, 1 қабат («Avtodom»СО аумағында)
             </p>
             <p class="program-text">
               Бутик «<span class="text-red">G</span>T oil service» 154-155<br />
-              ТЦ «Car city» микрорайон Баянаул, 57а, 2 ярус</br> 
-              Ауэзовский район, г. Алматы</br>
-              Время работы 10:00-18:00
+              «Car city» СО, Баянауыл шағынауданы, 57а, 2 қабат</br>
+              Әуезов ауданы, Алматы қ.</br>
+              Жұмыс уақыты 10:00-18:00
             </p>
           </div>
           <div class="note">
-            <h3 class="note-title">ПРИМИЧАНИЕ!</h3>
+            <h3 class="note-title">ЕСКЕРТУ!</h3>
             <p class="note-text">
-              Сотрудники компании и их родственники не могу принимать участие.
+                Компания қызметкерлері мен олардың туысы қатыса алмайды. 
             </p>
           </div>
         </div>
