Index_kz changed styles

--- a/assets/index_kz.html
+++ b/assets/index_kz.html
@@ -6,6 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="images/logo.webp" />
     <link rel="stylesheet" href="css/styles.min.css" />
+    <style type="text/css">
+        .header-title, .prizes-title {
+            font-family: "MetaPro Medium";
+            font-size: 42px    
+        }
+
+        @media (max-width: 992px) {
+         .header-title {
+            font-size: 32px;
+            }
+        }
+
+        @media (max-width: 768px) {
+         .header-title {
+            font-size: 24px;
+            }
+        }
+
+        .icons-wrapper span {
+            top: 0px;
+            left: 0;
+        }
+
+    </style>
     <title>Zhantaq</title>
   </head>
   <body>
@@ -65,7 +89,7 @@
         </div>
       </div>
       <div class="container container-custom">
-        <h1 class="header-title">Призы от ZHANTAQ tea</h1>
+        <h1 class="header-title">«ZHANTAQ tea сыйлықтары» акциясы</h1>
       </div>
       <!-- <img class="bottles" src="images/header-bottle.png" alt="Бутылки" /> -->
       <a class="btn-action" href="#">Участвовать в розыгрыше</a>
@@ -73,7 +97,7 @@
     <main>
       <section class="prizes">
         <div class="container container-custom">
-          <h2 class="prizes-title">Призы от <b>ZHANTAQ tea</b></h2>
+          <h2 class="prizes-title"><b>«ZHANTAQ tea сыйлықтары»</b> акциясы</h2>
           <p class="prizes-text">
             Автожүргізуші болсаңыз, сізді қуантатын жаңалығымыз бар!  «ZHANTAQ tea» мен «<span class="text-red">G</span>T oil service» компаниясылары бірге бағалы сыйлықтарға ұтыс жариялайды. Ал ең бастысы, ZHANTAQ tea сізге барлық уақытта сергек жүруге, тонуста болуға және ағзаңызды күтуге көмектеседі.
           </p>
