--- a/assets/index.html
+++ b/assets/index.html
@@ -65,7 +65,7 @@
       </div>
       <img class="bottles" src="images/header-bottle.png" alt="">
       <div class="container container-custom">
-        <h1 class="header-title">Призы от ZHANTAQ tea</h1>
+        <h1 class="header-title">Призы от "ZHANTAQ tea"</h1>
       </div>
       <!-- <img class="bottles" src="images/header-bottle.png" alt="Бутылки" /> -->
       <a class="btn-action" href="#">Участвовать в розыгрыше</a>
@@ -73,12 +73,12 @@
     <main>
       <section class="prizes">
         <div class="container container-custom">
-          <h2 class="prizes-title">Призы от <b>ZHANTAQ tea</b></h2>
+          <h2 class="prizes-title">Призы от <b>"ZHANTAQ tea"</b></h2>
           <p class="prizes-text">
-            Ты автолюбитель, у нас для тебя радостная новость, «ZHANTAQ tea» совместно с компанией «<span class="text-red">G</span>T Oil service», объявляют розыгрыш ценных призов. А самое главное, ZHANTAQ tea поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
+            Ты автолюбитель, у нас для тебя радостная новость, «"ZHANTAQ tea"» совместно с компанией «<span class="text-red">G</span>T Oil service», объявляют розыгрыш ценных призов. А самое главное, "ZHANTAQ tea" поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
           </p>
           <p class="prizes-text">
-            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T Oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку «ZHANTAQ tea» на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку ZHANTAQ tea, а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> Oil service» единоразово
+            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T Oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку «"ZHANTAQ tea"» на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку "ZHANTAQ tea", а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> Oil service» единоразово
           <p class="prizes-text">
             Данная скидка действует в момент нанесения наклейки и не суммируется с другими акциями компанией «<span class="text-red">G</span> Oil service»
           </p>
@@ -96,20 +96,20 @@
               <h3 class="days">Понедельник-четверг:</h3>
               <ul>
                 <li>1) 20 л. Бензина АИ-92</li>
-                <li>2) 10 л. Бензина АИ-92 и 6 ZHANTAQ tea</li>
+                <li>2) 10 л. Бензина АИ-92 и 6 "ZHANTAQ tea"</li>
                 <li>3) 12 ZHANTAQ + Футболка</li>
-                <li>4) 6 ZHANTAQ tea</li>
-                <li>5) 4 ZHANTAQ tea</li>
+                <li>4) 6 "ZHANTAQ tea"</li>
+                <li>5) 4 "ZHANTAQ tea"</li>
               </ul>
             </div>
             <div class="prizes-list">
               <h3 class="days">Пятница:</h3>
               <ul>
                 <li>1) 50 л. Бензина АИ-92</li>
-                <li>2) 20 л. Бензина АИ-92 и 12 ZHANTAQ tea</li>
-                <li>3) 12 ZHANTAQ tea + Футболка</li>
-                <li>4) 6 ZHANTAQ tea + Футболка</li>
-                <li>5) 4 ZHANTAQ tea + Футболка</li>
+                <li>2) 20 л. Бензина АИ-92 и 12 "ZHANTAQ tea"</li>
+                <li>3) 12 "ZHANTAQ tea" + Футболка</li>
+                <li>4) 6 "ZHANTAQ tea" + Футболка</li>
+                <li>5) 4 "ZHANTAQ tea" + Футболка</li>
               </ul>
             </div>
           </div>
@@ -122,7 +122,7 @@
               Обязательные условия для участия в акции:
             </h3>
             <ul>
-              <li>- иметь на автомобиле стикер «ZHANTAQ tea»</li>
+              <li>- иметь на автомобиле стикер «"ZHANTAQ tea"»</li>
               <li>- быть подписчиком Instagramm аккаунта <a href="https://instagram.com/zhantaq.tea" target="_blank"><img class="inst-icon" src="images/instagram-icon.png" alt=""></a> zhantaq_tea</li>
             </ul>
           </div>
