Removed eng link from nav

--- a/assets/index.html
+++ b/assets/index.html
@@ -58,7 +58,6 @@
             <div class="header-lang">
               <a href="index.html" style="color: #ffffff">RU</a>
               <a href="index_kz.html">KZ</a>
-              <a href="index_eng.html">EN</a>
             </div>
           </div>
         </div>
@@ -75,10 +74,10 @@
         <div class="container container-custom">
           <h2 class="prizes-title">Призы от <b>"ZHANTAQ tea"</b></h2>
           <p class="prizes-text">
-            Ты автолюбитель, у нас для тебя радостная новость, «"ZHANTAQ tea"» совместно с компанией «<span class="text-red">G</span>T Oil service», объявляют розыгрыш ценных призов. А самое главное, "ZHANTAQ tea" поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
+            Ты автолюбитель, у нас для тебя радостная новость, "ZHANTAQ tea" совместно с компанией «<span class="text-red">G</span>T Oil service», объявляют розыгрыш ценных призов. А самое главное, "ZHANTAQ tea" поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
           </p>
           <p class="prizes-text">
-            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T Oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку «"ZHANTAQ tea"» на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку "ZHANTAQ tea", а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> Oil service» единоразово
+            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T Oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку "ZHANTAQ tea" на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку "ZHANTAQ tea", а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> Oil service» единоразово
           <p class="prizes-text">
             Данная скидка действует в момент нанесения наклейки и не суммируется с другими акциями компанией «<span class="text-red">G</span> Oil service»
           </p>
@@ -122,7 +121,7 @@
               Обязательные условия для участия в акции:
             </h3>
             <ul>
-              <li>- иметь на автомобиле стикер «"ZHANTAQ tea"»</li>
+              <li>- иметь на автомобиле стикер "ZHANTAQ tea"</li>
               <li>- быть подписчиком Instagramm аккаунта <a href="https://instagram.com/zhantaq.tea" target="_blank"><img class="inst-icon" src="images/instagram-icon.png" alt=""></a> zhantaq_tea</li>
             </ul>
           </div>
