Fixed issue with active language

--- a/assets/index_kz.html
+++ b/assets/index_kz.html
@@ -53,8 +53,8 @@
                 <li><a href="#yandex" class="header-link">контакты</a></li>
               </ul>
               <div class="header-lang">
-                <a href="index.html" style="color: #559374">RU</a>
-                <a href="index_kz.html">KZ</a>
+                <a href="index.html">RU</a>
+                <a href="index_kz.html" style="color: #559374">KZ</a>
               </div>
             </div>
           </div>
@@ -81,8 +81,8 @@
               <a href="tel: +77770077787">+7 777 007 77 87</a>
             </div>
             <div class="header-lang">
-              <a href="index.html" style="color: #ffffff">RU</a>
-              <a href="index_kz.html">KZ</a>
+              <a href="index.html">RU</a>
+              <a href="index_kz.html" style="color: #ffffff" >KZ</a>
             </div>
           </div>
         </div>
