--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <header class="header">
-      <img class="bottles" src="images/header-bottle.png" alt="">
       <div class="top-line">
         <div class="container">
           <div class="header-logo">
@@ -59,13 +58,13 @@
             <div class="header-lang">
               <a href="index.html" style="color: #ffffff">RU</a>
               <a href="index_kz.html">KZ</a>
-              <a href="index_eng.html">EN</a>
             </div>
           </div>
         </div>
       </div>
+      <img class="bottles" src="images/header-bottle.png" alt="">
       <div class="container container-custom">
-        <h1 class="header-title">Призы от ZHANTAQ tea</h1>
+        <h1 class="header-title">Призы от "ZHANTAQ tea"</h1>
       </div>
       <!-- <img class="bottles" src="images/header-bottle.png" alt="Бутылки" /> -->
       <a class="btn-action" href="#">Участвовать в розыгрыше</a>
@@ -73,14 +72,14 @@
     <main>
       <section class="prizes">
         <div class="container container-custom">
-          <h2 class="prizes-title">Призы от <b>ZHANTAQ tea</b></h2>
+          <h2 class="prizes-title">Призы от <b>"ZHANTAQ tea"</b></h2>
           <p class="prizes-text">
-            Ты автолюбитель, у нас для тебя радостная новость, «ZHANTAQ tea» совместно с компанией «<span class="text-red">G</span>T oil service», объявляют розыгрыш ценных призов. А самое главное, ZHANTAQ tea поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
+            Ты автолюбитель, у нас для тебя радостная новость, "ZHANTAQ tea" совместно с компанией «<span class="text-red">G</span>T Oil service», объявляют розыгрыш ценных призов. А самое главное, "ZHANTAQ tea" поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
           </p>
           <p class="prizes-text">
-            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку «ZHANTAQ tea» на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку ZHANTAQ tea, а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> oil service» единоразово
+            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T Oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку "ZHANTAQ tea" на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку "ZHANTAQ tea", а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> Oil service» единоразово
           <p class="prizes-text">
-            Данная скидка действует в момент нанесения наклейки и не суммируется с другими акциями компанией «<span class="text-red">G</span> oil service»
+            Данная скидка действует в момент нанесения наклейки и не суммируется с другими акциями компанией «<span class="text-red">G</span> Oil service»
           </p>
           <div class="icons-wrapper">
             <span> C 10.05.2022 по 29.07.2022</span>
@@ -96,20 +95,20 @@
               <h3 class="days">Понедельник-четверг:</h3>
               <ul>
                 <li>1) 20 л. Бензина АИ-92</li>
-                <li>2) 10 л. Бензина АИ-92 и 6 ZHANTAQ tea</li>
+                <li>2) 10 л. Бензина АИ-92 и 6 "ZHANTAQ tea"</li>
                 <li>3) 12 ZHANTAQ + Футболка</li>
-                <li>4) 6 ZHANTAQ tea</li>
-                <li>5) 4 ZHANTAQ tea</li>
+                <li>4) 6 "ZHANTAQ tea"</li>
+                <li>5) 4 "ZHANTAQ tea"</li>
               </ul>
             </div>
             <div class="prizes-list">
               <h3 class="days">Пятница:</h3>
               <ul>
                 <li>1) 50 л. Бензина АИ-92</li>
-                <li>2) 20 л. Бензина АИ-92 и 12 ZHANTAQ tea</li>
-                <li>3) 12 ZHANTAQ tea + Футболка</li>
-                <li>4) 6 ZHANTAQ tea + Футболка</li>
-                <li>5) 4 ZHANTAQ tea + Футболка</li>
+                <li>2) 20 л. Бензина АИ-92 и 12 "ZHANTAQ tea"</li>
+                <li>3) 12 "ZHANTAQ tea" + Футболка</li>
+                <li>4) 6 "ZHANTAQ tea" + Футболка</li>
+                <li>5) 4 "ZHANTAQ tea" + Футболка</li>
               </ul>
             </div>
           </div>
@@ -122,7 +121,7 @@
               Обязательные условия для участия в акции:
             </h3>
             <ul>
-              <li>- иметь на автомобиле стикер «ZHANTAQ tea»</li>
+              <li>- иметь на автомобиле стикер "ZHANTAQ tea"</li>
               <li>- быть подписчиком Instagramm аккаунта <a href="https://instagram.com/zhantaq.tea" target="_blank"><img class="inst-icon" src="images/instagram-icon.png" alt=""></a> zhantaq_tea</li>
             </ul>
           </div>
@@ -130,63 +129,63 @@
             <h3 class="program-title">Адресная программа:</h3>
             <h3 class="program-title">Адрес:</h3>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               Тлендиева, 377а, Бостандыкский, г.Алматы
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               ул. Алматы участок, 88</br> пос. Каргалы (Фабричный), Алматинская
               область
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               Ангарская, 137</br> Жетысуский район, г. Алматы
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               г. Алматы, проспект Райымбека 355/2</br> Алатауский район
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service» (ПЗМ)<br />
+              «<span class="text-red">G</span>T Oil service» (ПЗМ)<br />
               г. Алматы, Бостандыкский район,</br> Сатпаева, 90/211 (на
               территории ТЦ «Avtodom»)
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               г. Алматы, Турксибский район,</br> Миасская 2Б
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               г. Алматы, Жетысуский район,</br> Жансугурова, 194Б
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               обл. Алматинская Караайский район,</br> с.о Елтайский, М.Кенжин, уч 61,
               ст. 71 разъезд
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               г.Алматы, Ауэзовский район, Яссауи 190
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               г. Алматы Мкр. Бостандыкский район, Дарын 24Б
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               Алматинская обл., Илийский р-н, п. Боралдай,</br> ул. Аэродромная, д 2Г
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T oil service»<br />
+              «<span class="text-red">G</span>T Oil service»<br />
               Алматинская область, г. Каскелен,</br> Проспект Абылай Хана 1а
             </p>
             <p class="program-text">
-              Бутик «<span class="text-red">G</span>T oil service»<br />
+              Бутик «<span class="text-red">G</span>T Oil service»<br />
               г. Алматы, Бостандыкский район,</br> Сатпаева 90/21, 1 этаж (на
               территории ТЦ «Avtodom»)
             </p>
             <p class="program-text">
-              Бутик «<span class="text-red">G</span>T oil service» 154-155<br />
+              Бутик «<span class="text-red">G</span>T Oil service» 154-155<br />
               ТЦ «Car city» микрорайон Баянаул, 57а, 2 ярус</br> 
               Ауэзовский район, г. Алматы</br>
               Время работы 10:00-18:00
