--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             Ты автолюбитель, у нас для тебя радостная новость, "ZHANTAQ tea" совместно с компанией «<span class="text-red">G</span>T Oil service», объявляют розыгрыш ценных призов. А самое главное, "ZHANTAQ tea" поможет тебе оставаться всегда в бодром состояние, быть в тонусе и поддерживать свой организм здоровым.
           </p>
           <p class="prizes-text">
-            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T Oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку "ZHANTAQ tea" на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку "ZHANTAQ tea", а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span> Oil service» единоразово
+            С 6 мая по 31 июля по всей сети  «<span class="text-red">G</span>T Oil service» с 09:00 по 19:00 любой желающий может принять участие в акции. Для участия в розыгрыше обязательно нужно приехать и нанести наклейку "ZHANTAQ tea" на своё авто в указанных ниже адресах, дополнительно можно будет получить в подарок бутылку "ZHANTAQ tea", а также получить 5% скидку на товар и услуги компании  «<span class="text-red">G</span>T Oil service» единоразово
           <p class="prizes-text">
-            Данная скидка действует в момент нанесения наклейки и не суммируется с другими акциями компанией «<span class="text-red">G</span> Oil service»
+            Данная скидка действует в момент нанесения наклейки и не суммируется с другими акциями компанией «<span class="text-red">G</span>T Oil service»
           </p>
           <div class="icons-wrapper">
             <span> C 10.05.2022 по 29.07.2022</span>
