--- a/index_kz.html
+++ b/index_kz.html
@@ -101,9 +101,9 @@
             Автожүргізуші болсаңыз, сізді қуантатын жаңалығымыз бар!  "ZHANTAQ tea" мен «<span class="text-red">G</span>T Oil service» компаниясылары бірге бағалы сыйлықтарға ұтыс жариялайды. Ал ең бастысы, "ZHANTAQ tea" сізге барлық уақытта сергек жүруге, тонуста болуға және ағзаңызды күтуге көмектеседі.
           </p>
           <p class="prizes-text">
-            06.05 – 31.07 дейін «<span class="text-red">G</span>T Oil service» желілері бойынша сағат 09:00-ден 19:00-ге дейін кез келген жүргізуші науқанға қатыса алады. Ұтыс ойынына қатысу үшін төменде көрсетілген мекенжайларға міндетті түрде келіп, өз көлігіңізге "ZHANTAQ tea" жапсырмасын жапсыру арқылы акцияға қатысуға мумкіншілік аласыз. Сонымен қатар сыйлыққа "ZHANTAQ tea" бөтелкесін және «<span class="text-red">G</span> Oil service» компаниясының тауарлары мен қызметтеріне бір реттік 5% жеңілдікке ие боласыз.
+            06.05 – 31.07 дейін «<span class="text-red">G</span>T Oil service» желілері бойынша сағат 09:00-ден 19:00-ге дейін кез келген жүргізуші науқанға қатыса алады. Ұтыс ойынына қатысу үшін төменде көрсетілген мекенжайларға міндетті түрде келіп, өз көлігіңізге "ZHANTAQ tea" жапсырмасын жапсыру арқылы акцияға қатысуға мумкіншілік аласыз. Сонымен қатар сыйлыққа "ZHANTAQ tea" бөтелкесін және «<span class="text-red">G</span>T Oil service» компаниясының тауарлары мен қызметтеріне бір реттік 5% жеңілдікке ие боласыз.
           <p class="prizes-text">
-            Бұл жеңілдік жапсырма жабыстырған сәттен бастап күшіне ие болады, бірақ ол «<span class="text-red">G</span> Oil service» компаниясының басқа акцияларына  жүргізілмейді. 
+            Бұл жеңілдік жапсырма жабыстырған сәттен бастап күшіне ие болады, бірақ ол «<span class="text-red">G</span>T Oil service» компаниясының басқа акцияларына  жүргізілмейді. 
           </p>
           <div class="icons-wrapper">
             <span> 10.05.2022 - 29.07.2022 </span>
