--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       </div>
       <!-- <img class="bottles" src="images/header-bottle.png" alt="Бутылки" /> -->
       <a class="btn-action" href="#">Участвовать в розыгрыше</a>
+      <!-- <img class="header-bg-mobile" src="images/header-bg-mobile.png" alt=""> -->
     </header>
     <main>
       <section class="prizes">
@@ -194,7 +195,7 @@
           <div class="note">
             <h3 class="note-title">ПРИМИЧАНИЕ!</h3>
             <p class="note-text">
-              Сотрудники компании и их родственники не могу принимать участие.
+              Сотрудники компании и их родственники не могут принимать участие.
             </p>
           </div>
         </div>
