--- a/index_kz.html
+++ b/index_kz.html
@@ -98,12 +98,12 @@
         <div class="container container-custom">
           <h2 class="prizes-title"><b>«ZHANTAQ tea сыйлықтары»</b> акциясы</h2>
           <p class="prizes-text">
-            Автожүргізуші болсаңыз, сізді қуантатын жаңалығымыз бар!  "ZHANTAQ tea" мен «<span class="text-red">G</span>T Oil service» компаниясылары бірге бағалы сыйлықтарға ұтыс жариялайды. Ал ең бастысы, "ZHANTAQ tea" сізге барлық уақытта сергек жүруге, тонуста болуға және ағзаңызды күтуге көмектеседі.
+            Автожүргізуші болсаңыз, сізді қуантатын жаңалығымыз бар!  "ZHANTAQ tea" мен «<span class="text-red">G</span><span class="text-purple">T</span> Oil service» компаниясылары бірге бағалы сыйлықтарға ұтыс жариялайды. Ал ең бастысы, "ZHANTAQ tea" сізге барлық уақытта сергек жүруге, тонуста болуға және ағзаңызды күтуге көмектеседі.
           </p>
           <p class="prizes-text">
-            06.05 – 31.07 дейін «<span class="text-red">G</span>T Oil service» желілері бойынша сағат 09:00-ден 19:00-ге дейін кез келген жүргізуші науқанға қатыса алады. Ұтыс ойынына қатысу үшін төменде көрсетілген мекенжайларға міндетті түрде келіп, өз көлігіңізге "ZHANTAQ tea" жапсырмасын жапсыру арқылы акцияға қатысуға мумкіншілік аласыз. Сонымен қатар сыйлыққа "ZHANTAQ tea" бөтелкесін және «<span class="text-red">G</span>T Oil service» компаниясының тауарлары мен қызметтеріне бір реттік 5% жеңілдікке ие боласыз.
+            06.05 – 31.07 дейін «<span class="text-red">G</span><span class="text-purple">T</span> Oil service» желілері бойынша сағат 09:00-ден 19:00-ге дейін кез келген жүргізуші науқанға қатыса алады. Ұтыс ойынына қатысу үшін төменде көрсетілген мекенжайларға міндетті түрде келіп, өз көлігіңізге "ZHANTAQ tea" жапсырмасын жапсыру арқылы акцияға қатысуға мумкіншілік аласыз. Сонымен қатар сыйлыққа "ZHANTAQ tea" бөтелкесін және «<span class="text-red">G</span><span class="text-purple">T</span> Oil service» компаниясының тауарлары мен қызметтеріне бір реттік 5% жеңілдікке ие боласыз.
           <p class="prizes-text">
-            Бұл жеңілдік жапсырма жабыстырған сәттен бастап күшіне ие болады, бірақ ол «<span class="text-red">G</span>T Oil service» компаниясының басқа акцияларына  жүргізілмейді. 
+            Бұл жеңілдік жапсырма жабыстырған сәттен бастап күшіне ие болады, бірақ ол «<span class="text-red">G</span><span class="text-purple">T</span> Oil service» компаниясының басқа акцияларына  жүргізілмейді. 
           </p>
           <div class="icons-wrapper">
             <span> 10.05.2022 - 29.07.2022 </span>
@@ -150,59 +150,59 @@
             <h3 class="program-title">Бағдарлама мекен-жайлары:</h3>
             <h3 class="program-title">Адрес:</h3>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Төлендиев, 377а, Бостандық ауданы, Алматы қ.
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы көшесі, 88 учаске</br>Қарғалы елд. (Фабричный), Алматы облысы 
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Ангарская, 137</br> Жетісу ауданы, Алматы қ.
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы қ., Райымбек даңғылы 355/2</br> Алатау ауданы
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service» (ПЗМ)<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service» (ПЗМ)<br />
               Алматы қ., Бостандық ауданы,</br> Сәтбаев, 90/211 («Avtodom» СО аумағында)
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы қ., Түрксіб ауданы,</br> Миасская 2Б
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы қ., Жетісу ауданы,</br> Жансүгіров, 194Б
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы обл. Қарасай ауданы, Елтай а.о.,</br> М.Кенжин, 61 уч., 71 разъезд ст.
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы қ., Әуезов ауданы, Яссауи, 190
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы қ. Бостандық ауданы, Дарын 24Б
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы обл., Іле ауданы, Боралдай елд.,</br> Аэродромная көш., 2Г үй
             </p>
             <p class="program-text">
-              «<span class="text-red">G</span>T Oil service»<br />
+              «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы облысы, Қаскелең қ.,</br> Абылай Хан  даңғылы, 1а
             </p>
             <p class="program-text">
-              Бутик «<span class="text-red">G</span>T Oil service»<br />
+              Бутик «<span class="text-red">G</span><span class="text-purple">T</span> Oil service»<br />
               Алматы қ., Бостандық ауданы,</br> Сәтбаев 90/21, 1 қабат («Avtodom»СО аумағында)
             </p>
             <p class="program-text">
-              Бутик «<span class="text-red">G</span>T Oil service» 154-155<br />
+              Бутик «<span class="text-red">G</span><span class="text-purple">T</span> Oil service» 154-155<br />
               «Car city» СО, Баянауыл шағынауданы, 57а, 2 қабат</br>
               Әуезов ауданы, Алматы қ.</br>
               Жұмыс уақыты 10:00-18:00
